src/test/testFiles/invalid/semanticErrors/incorrectMethodName.val
let x = Stack<number>();
x.hello(5);